<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Module Metadata -->
  <!-- Parent is TBD <parent> <groupId>org.ihtsdo.otf</groupId> <artifactId>otf-parent</artifactId> 
    <version>1.0.0-SNAPSHOT</version> <relativePath/> </parent> -->

  <groupId>org.ihtsdo.otf.mapping</groupId>
  <artifactId>mapping-parent</artifactId>
  <version>1.7.68-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>IHTSDO Mapping Service Parent</name>
  <description>Parent project for mapping service</description>

  <properties>
    <!-- Set default maven settings -->
    <releaseVersion>${project.version}</releaseVersion>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <amazonaws.version>1.11.623</amazonaws.version>
    <apache.poi>4.1.1</apache.poi>
    <asm.version>20041228.180559</asm.version>
    <cglib.version>3.3.0</cglib.version>
    <commons-io.version>2.7</commons-io.version>
    
    <!-- Set hibernate versions -->
    <hibernate.c3p0.version>5.4.24.Final</hibernate.c3p0.version>
    <hibernate.core.version>5.4.24.Final</hibernate.core.version>
    <hibernate.entitymanager.version>5.4.24.Final</hibernate.entitymanager.version>
    <hibernate.envers.version>5.4.24.Final</hibernate.envers.version>
    <hibernate.search.version>5.11.2.Final</hibernate.search.version>
    <hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
    
    <java.version>11</java.version>
    <javax.mail.version>1.6.2</javax.mail.version>
    <javax.servlet.version>4.0.1</javax.servlet.version>
    <javax.transaction.version>1.1</javax.transaction.version>
    <javax.ws.version>2.1.1</javax.ws.version>
    <javax.xml.bind.version>2.3.1</javax.xml.bind.version>
    
    <jaxb.runtime.version>2.4.0-b180830.0438</jaxb.runtime.version>
    <sun.xml.jaxb-core.version>2.3.0.1</sun.xml.jaxb-core.version>
    <sun.xml.jaxb-impl.version>2.3.2</sun.xml.jaxb-impl.version>
    
    <jersey.core.version>2.29</jersey.core.version>
    <jersey.media.version>2.29</jersey.media.version>
    <jersey.version>2.29</jersey.version>
    <jettison.version>1.5.4</jettison.version>
    <junit.version>4.13.1</junit.version>
    <lucene.version>5.5.5</lucene.version>
    
    <!-- Set maven plugin versions -->
    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
    <maven.invoker.version>3.0.1</maven.invoker.version>
    <maven.javadoc.skip>true</maven.javadoc.skip>
    <maven.model.version>3.6.2</maven.model.version>
    <maven.plugin.annotations.version>3.6.0</maven.plugin.annotations.version>
    <maven.plugin.api.version>3.6.2</maven.plugin.api.version>
    <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
    <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
    <maven.war.plugin.version>2.6</maven.war.plugin.version>

    <!-- <mysql.connector.java.version>8.0.28</mysql.connector.java.version> -->
    <mysql.connector.java.version>8.0.33</mysql.connector.java.version>
    
    <org.apache.commons.lang3.version>3.9</org.apache.commons.lang3.version>
    <org.json.version>20231013</org.json.version>
    <org.reflections.version>0.9.10</org.reflections.version>
    <sax.version>2.0.1</sax.version>
    <slf4j.log4j12.version>1.7.28</slf4j.log4j12.version>
    <swagger.version>1.5.23</swagger.version>
    <xml-apis.version>2.0.2</xml-apis.version>
    <xom.version>1.3.2</xom.version>
    
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Model interfaces. -->
      <!-- <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>index-viewer-data-empty</artifactId>
        <version>${releaseVersion}</version>
      </dependency> -->
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-model</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-jpa-model</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-services</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-jpa-services</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-rest</artifactId>
        <version>${releaseVersion}</version>
        <classifier>classes</classifier>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-rest-client</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-mojo</artifactId>
        <version>${releaseVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.ihtsdo.otf.mapping</groupId>
        <artifactId>mapping-reports</artifactId>
        <version>${releaseVersion}</version>
      </dependency>

      <!-- JPA dependencies -->
      <dependency>
        <groupId>javax.transaction</groupId>
        <artifactId>jta</artifactId>
        <version>${javax.transaction.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-c3p0</artifactId>
        <version>${hibernate.c3p0.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-search-orm</artifactId>
        <version>${hibernate.search.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-envers</artifactId>
        <version>${hibernate.envers.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-entitymanager</artifactId>
        <version>${hibernate.entitymanager.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-validator</artifactId>
        <version>${hibernate.validator.version}</version>
      </dependency>
      
      <!-- 
      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>${mysql.connector.java.version}</version>
      </dependency>
       -->
      
      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>${mysql.connector.java.version}</version>
      </dependency>

      <!-- Lucene -->
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-queryparser</artifactId>
        <version>${lucene.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-suggest</artifactId>
        <version>${lucene.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-backward-codecs</artifactId>
        <version>${lucene.version}</version>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.log4j12.version}</version>
      </dependency>

      <!-- Maven plugins -->
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${maven.plugin.api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven.resources.plugin.version}</version>
      </dependency>
	  <dependency>
    	<groupId>org.apache.maven</groupId>
    	<artifactId>maven-model</artifactId>
        <version>${maven.model.version}</version>
	  </dependency>      

      <!-- Required for Jersey and JSON -->
      <dependency>
        <groupId>org.glassfish.jersey.core</groupId>
        <artifactId>jersey-client</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-json-jackson</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <!-- Keep this to launch the servlet -->
      <dependency>
        <groupId>org.glassfish.jersey.containers</groupId>
        <artifactId>jersey-container-servlet</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.containers</groupId>
        <artifactId>jersey-container-servlet-core</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-multipart</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.inject</groupId>
        <artifactId>jersey-hk2</artifactId>
        <version>${jersey.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.jettison</groupId>
        <artifactId>jettison</artifactId>
        <version>${jettison.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-json-processing</artifactId>
        <version>${jersey.media.version}</version>
      </dependency>
      <dependency>
    	<groupId>javax.ws.rs</groupId>
    	<artifactId>javax.ws.rs-api</artifactId>
    	<version>${javax.ws.version}</version>
	  </dependency>
      <dependency>
        <groupId>asm</groupId>
        <artifactId>asm</artifactId>
        <version>${asm.version}</version>
      </dependency>
      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-jersey2-jaxrs</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>${javax.servlet.version}</version>
        <scope>provided</scope>
      </dependency>

	  <!-- Amazon AWS -->
	  <dependency>
		<groupId>com.amazonaws</groupId>
		<artifactId>aws-java-sdk</artifactId>
		<version>${amazonaws.version}</version>
	  </dependency>

      <!-- Unit testing -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>cglib</groupId>
        <artifactId>cglib</artifactId>
        <version>${cglib.version}</version>
      </dependency>

      <!-- Sending email -->
      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>javax.mail</artifactId>
        <version>${javax.mail.version}</version>
      </dependency>

      <!-- XML DOM library -->
      <dependency>
        <groupId>xom</groupId>
        <artifactId>xom</artifactId>
        <version>${xom.version}</version>
      </dependency>

      <!-- Apache POI library -->
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>${apache.poi}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>${apache.poi}</version>
      </dependency>

      <!-- Apache commons-lang3 - for FastDateTime -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${org.apache.commons.lang3.version}</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>


      <!-- Maven invoker -->
      <dependency>
        <groupId>org.apache.maven.shared</groupId>
        <artifactId>maven-invoker</artifactId>
        <version>${maven.invoker.version}</version>
      </dependency>
      
	<dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${maven.plugin.annotations.version}</version>
        <scope>provided</scope>
      </dependency>
      
      <dependency>
        <groupId>javax.xml.bind</groupId>
        <artifactId>jaxb-api</artifactId>
        <version>${javax.xml.bind.version}</version>
      </dependency>
      
      <dependency>
        <groupId>com.sun.xml.bind</groupId>
        <artifactId>jaxb-core</artifactId>
        <version>${sun.xml.jaxb-core.version}</version>
      </dependency>
      <dependency>
        <groupId>com.sun.xml.bind</groupId>
        <artifactId>jaxb-impl</artifactId>
        <version>${sun.xml.jaxb-impl.version}</version>
      </dependency>

      <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>${jaxb.runtime.version}</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/javax.xml.parsers/jaxp-api -->
      <dependency>
        <groupId>xml-apis</groupId>
        <artifactId>xml-apis</artifactId>
        <version>${xml-apis.version}</version>
      </dependency>
      <dependency>
        <groupId>sax</groupId>
        <artifactId>sax</artifactId>
        <version>${sax.version}</version>
      </dependency>


	<!-- JSON -->
	<dependency>
    	<groupId>org.json</groupId>
    	<artifactId>json</artifactId>
        <version>${org.json.version}</version>
    </dependency>
    
      <!-- 0.9.11 throw exceptions, keep older version -->
	<dependency>
    	<groupId>org.reflections</groupId>
    	<artifactId>reflections</artifactId>
        <version>${org.reflections.version}</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
	<dependency>
		<groupId>org.jsoup</groupId>
		<artifactId>jsoup</artifactId>
		<version>1.15.3</version>
	</dependency>
    
    </dependencies>
  </dependencyManagement>

  <build>

    <!-- Plugins -->
    <pluginManagement>
      <plugins>

        <!-- Project plugins -->
        <plugin>
          <groupId>org.ihtsdo.otf.mapping</groupId>
          <artifactId>mapping-admin-mojo</artifactId>
          <version>${releaseVersion}</version>
        </plugin>

        <!-- Maven plugins -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.7</version>
        </plugin>

       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <release>${java.version}</release>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.ow2.asm</groupId>
              <artifactId>asm</artifactId>
              <version>6.2</version>
            </dependency>
          </dependencies>
        </plugin>
        
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <includes>
              <include>**/*Test.java</include>
            </includes>
            <skipTests>false</skipTests>
            <argLine>
              --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven.war.plugin.version}</version>
        </plugin>

        <!-- Properties plugin, for loading properties from a file -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>1.0-alpha-1</version>
        </plugin>

        <!-- For attaching zip artifacts -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.9.1</version>
        </plugin>

        <!-- For building zip files -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>truezip-maven-plugin</artifactId>
          <version>1.2</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.3</version>
          <configuration>
            <rulesUri>file:///${project.basedir}/rules.xml</rulesUri>
          </configuration>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>display-dependency-updates</goal>
                <goal>display-plugin-updates</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

      </plugins>
    </pluginManagement>

  </build>

 <!-- Distribution management -->
  <repositories>
    <repository>
      <id>ihtsdo-public-nexus</id>
      <name>IHTSDO Public Nexus Releases</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-releases/</url>
    </repository>
    <repository>
      <id>ihtsdo-public-nexus-snapshot</id>
      <name>IHTSDO Public Nexus Snapshots</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-snapshots/</url>
    </repository>
    <repository>
      <id>jvnet-nexus-staging</id>
      <url>http://maven.java.net/content/repositories/staging/</url>
      <layout>default</layout>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>ihtsdo-public-nexus</id>
      <name>IHTSDO Public Nexus Releases</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-releases/</url>
    </repository>
    <snapshotRepository>
      <id>ihtsdo-public-nexus</id>
      <name>IHTSDO Public Nexus Snapshots</name>
      <url>https://maven3.ihtsdotools.org/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

</project>